# dnd_scene_generator

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/dndscene/dnd_scene_generator/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: router.dart  theme.dart
lib/core/models/: character.dart  generation_settings.dart  model_info.dart  models.dart  scene_image.dart
lib/core/native/: sd_ffi.dart
lib/core/providers/: providers.dart
lib/core/services/: audio_service.dart  image_gen_service.dart  model_manager.dart  nlp_service.dart  permission_service.dart  prompt_builder.dart  services.dart  session_controller.dart  storage_service.dart  stt_service.dart
lib/features/: shell_screen.dart
lib/features/characters/: character_edit_screen.dart  characters_screen.dart
lib/features/gallery/: gallery_detail_screen.dart  gallery_screen.dart
lib/features/model_management/: model_management_screen.dart
lib/features/session/: session_screen.dart
lib/features/session/widgets/: listening_indicator.dart  pipeline_status_panel.dart  scene_display.dart  transcription_ticker.dart
lib/features/settings/: settings_screen.dart
lib/features/speech_test/: speech_test_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
native/: CMakeLists.txt
native/src/: sd_wrapper.c  sd_wrapper.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
